k8_config/production/testrail-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testrail-app-deployment
  labels:
    app: testrail-app
  namespace: testrail-import-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testrail-app
  template:
    metadata:
      labels:
        app: testrail-app
      namespace: testrail-import-production
    spec:
      volumes:
        - name: testrail-app-storage
          persistentVolumeClaim:
            claimName: testrail-app-volume-claim
      containers:
      - name: testrail-app
        image: mukuldebnath/testrail-import-app
        ports:
        - containerPort: 8000
        volumeMounts:
          - mountPath: "/vol/web"
            name: testrail-app-storage
---
apiVersion: v1
kind: Service
metadata:
  name: testrail-app-service
  namespace: testrail-import-production
spec:
  selector:
    app: testrail-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
