k8_config/production/testrail-celery-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testrail-celery-redis-deployment
  labels:
    app: testrail-celery-redis
  namespace: testrail-import-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testrail-celery-redis
  template:
    metadata:
      labels:
        app: testrail-celery-redis
      namespace: testrail-import-production
    spec:
      containers:
      - name: testrail-celery-redis
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: testrail-celery-redis-service
  namespace: testrail-import-production
spec:
  selector:
    app: testrail-celery-redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
