k8_config/production/testrail-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testrail-db-deployment
  labels:
    app: testrail-db
  namespace: testrail-import-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testrail-db
  template:
    metadata:
      labels:
        app: testrail-db
      namespace: testrail-import-production
    spec:
      volumes:
        - name: testrail-db-storage
          persistentVolumeClaim:
            claimName: testrail-db-volume-claim
      containers:
      - name: testrail-db
        image: mysql/mysql-server
        ports:
        - containerPort: 3306
        volumeMounts:
          - mountPath: "/var/lib/mysql"
            name: testrail-db-storage
---
apiVersion: v1
kind: Service
metadata:
  name: testrail-db-service
  namespace: testrail-import-production
spec:
  selector:
    app: testrail-db
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
